--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
 theme: jekyll-theme-cayman
 title: Instant Automation
 description: Automate everything in half the time
+twitter_username: agazoth
+github_username:  Agazoth
