-site-footer updated

--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,4 @@ title: Instant Automation
 description: Automate everything in half the time
 twitter_username: agazoth
 github_username:  Agazoth
+site-footer: "Investigate - Automate - Innovate"
