--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,6 @@ description: Automate everything in half the time
 twitter_username: agazoth
 github_username:  Agazoth
 site-footer: "Investigate - Automate - Innovate"
+footer-links:
+    github: Agazoth
+    twitter: agazoth
