--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: Instant Automation
 email: axel@riax.dk
-description: > # this means to ignore newlines until "baseurl:"
+description: >- # this means to ignore newlines until "baseurl:"
   Automating everything from Azure to the basement using Powershell.
   If you can do it in a GUI,youI can do the same thing in Powershell.
 
