--- a/_config.yml
+++ b/_config.yml
@@ -16,9 +16,7 @@
 title: Instant Automation
 email: axel@riax.dk
 description: >- # this means to ignore newlines until "baseurl:"
-  Automating everything from Azure to the basement using Powershell.
-  If you can do it in a GUI,youI can do the same thing in Powershell.
-
+  Automating everything from Azure to the basement using Powershell
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: agazoth
