--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,9 @@
 # in the templates via {{ site.myvariable }}.
 title: Instant Automation
 email: axel@riax.dk
-description: >- # this means to ignore newlines until "baseurl:"
-  Automating everything from Azure to the basement using Powershell
+description: > # this means to ignore newlines until "baseurl:"
+  Automating everything from Azure to the basement using Powershell.
+  If you can do it in a GUI, you can do it in Powershell.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: agazoth
