--- a/_config.yml
+++ b/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Instant Automation
+author: Axel Bøg Andersen
 email: axel@riax.dk
 description: > # this means to ignore newlines until "baseurl:"
   Automating everything from Azure to the basement using Powershell.
@@ -22,6 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: agazoth
 github_username: agazoth
+
 
 # Build settings
 markdown: kramdown
