Add CI workflow for Jekyll build and update project configuration
- Introduced a GitHub Actions workflow for building the Jekyll site on push and pull requests.
- Updated Gemfile.lock to include platform-specific dependencies.
- Enhanced the maintenance plan with CI workflow details.
- Revised README for clarity on local development and repository layout.
- Configured additional header pages in _config.yml.

--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,10 @@ url: "https://agazoth.github.io" # the base hostname & protocol for your site, e
 twitter_username: agazoth
 github_username: agazoth
 
+header_pages:
+  - about.md
+  - links.md
+
 
 # Build settings
 markdown: kramdown
