Update RubyGems installation in Jekyll build workflow for compatibility with Ruby 2.7

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -19,8 +19,11 @@ jobs:
           ruby-version: '2.7'
           bundler-cache: false
 
-      - name: Update RubyGems
-        run: gem update --system
+      - name: Update RubyGems (Ruby 2.7 compatible)
+        run: |
+          gem install rubygems-update -v 3.4.22
+          update_rubygems --no-document
+          gem --version
 
       - name: Install dependencies
         run: bundle install --jobs 4 --retry 3
