Update Jekyll build workflow and dependencies for Ruby 3.3 compatibility; enhance maintenance plan and scripts

--- a/.github/workflows/jekyll-build.yml
+++ b/.github/workflows/jekyll-build.yml
@@ -13,20 +13,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Ruby 2.7
+      - name: Setup Ruby 3.3
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '2.7'
-          bundler-cache: false
-
-      - name: Update RubyGems (Ruby 2.7 compatible)
-        run: |
-          gem install rubygems-update -v 3.4.22
-          update_rubygems --no-document
-          gem --version
-
-      - name: Install dependencies
-        run: bundle install --jobs 4 --retry 3
+          ruby-version: '3.3'
+          bundler-cache: true
 
       - name: Build site
         run: bundle exec jekyll build
