Update _config.yml to include additional exclusions for build processing

--- a/_config.yml
+++ b/_config.yml
@@ -48,5 +48,12 @@ plugins:
 #   - vendor/gems/
 #   - vendor/ruby/
 exclude:
+  - Gemfile
+  - Gemfile.lock
+  - node_modules
+  - vendor/bundle/
+  - vendor/cache/
+  - vendor/gems/
+  - vendor/ruby/
   - MAINTENANCE_PLAN.md
   - README.md
